--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link href="/index.css" rel="stylesheet" />
+  <script src="./node_modules/preline/dist/preline.js"></script>
   <title>DockerDemo</title>
 </head>
 
