--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" type="image/svg+xml" href="/bunyHat.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link href="/index.css" rel="stylesheet" />
   <script src="./node_modules/preline/dist/preline.js"></script>
-  <title>DockerDemo</title>
+  <title>NFSBT</title>
 </head>
 
 <body>
